--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,8 @@ body {
     max-width: 1000px;
     position: relative;
     margin: auto;
+    max-height: 500px;
+    margin-top: 100px;
 }
 
 .mySlides {
@@ -102,6 +104,7 @@ body {
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    background-color: #bbb;
 }
 
 .next {
