--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,9 @@
 @media only screen and (max-width: 599px) {
-    div {
-        max-width: 450px;
-    }
-
+    body {max-width: 598px;}
 }
 
 body {
     margin: 0;
-
 }
 
 /* Header Style */
@@ -44,7 +40,7 @@ body {
     min-width: 80%;
 }
 
-.main-nav-list li {
+.main-nav-list a {
     padding: 2.3%;
 }
 
@@ -98,17 +94,44 @@ body {
 
 /* Styling for navbar on mobile devices */
 @media only screen and (max-width: 599px) {
-    .mobile-nav-icon{
-        visibility: visible;
-        display: block;
-        position: absolute;
-        right: 20px;
-        size: 200%;
+    .main-nav-list {
+        height: 100%;
+        width: 100%;
     }
 
-    #nav-links.hidden-nav-links {
+    .mobile-nav-icon{
+        float: right;
+        display: block;
+        margin-top: 20px;
+        margin-right: 12px;
+        
+    }
+
+    .nav-list-links {
         display: none;
     }
+}
+
+/* "responsive" is added with JavaScript when user clicks on the icon. Displays links vertically */
+@media only screen and (max-width: 599px) {
+    .main-nav-list.responsive {position: relative;}
+    .main-nav-list.responsive a.mobile-nav-icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .main-nav-list.responsive a.nav-list-links {
+        display: block;
+        text-align: right;
+        font-size: 95%;
+    }
+    
+    .main-nav-list.responsive div.nav-links-block {
+        padding-top: 60px;
+        float: right;
+    }
+
 }
 
 /* Slideshow Style */
@@ -229,7 +252,10 @@ body {
 @media only screen and (max-width: 599px) {
 
     .pastor-about-container {
-        flex-wrap: wrap;
+        max-width: 590px;
+        margin-top: 28px;
+        flex-direction: column;
+        align-items: center;
     }
 
     .pastor-about-image-container {
