--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,7 @@ body {
     bottom: 0px;
     height: 150px;
     width: 100%;
+    max-height: 150px;
     border-top: 1px solid #b9b9c1;
 }
 
@@ -294,6 +295,22 @@ body {
 .pastor-about-text {
     width: 450px;
     padding-right: 40px;
+}
+
+/* Style for Ministerio de Alabanzas page */
+
+.alabanzaYoutubeContainer {
+    display: flex;
+    height: 650px;
+    align-items: center;
+    justify-content: center ;
+}
+
+.alabanzaDescriptionContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 1000px;
 }
 
 /* Media query to override for mobile devices */
