--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,10 @@ body {
 
 @media only screen and (max-width: 599px) {
     html {
-        height: 100%;
+        height: calc(100% - 220px);
     }
     body {
-        min-height: 100%;
+        min-height: calc(100% - 321px);
     }
 }
 
@@ -127,7 +127,7 @@ body {
 @media only screen and (max-width: 599px) {
     .main-nav-list {
         height: 100%;
-        width: 100%;
+        width: 98%;
     }
 
     .mobile-nav-icon{
