--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,15 @@ body {
 @media only screen and (max-width: 599px) {
     .page-wrap {
         min-height: 100%;
-        margin-bottom: 120px;
+        margin-bottom: 40px;
+    }
+}
+
+@media only screen and (max-width: 599px) {
+    .home-page-wrap {
+        margin-bottom:0px;
+        height: calc(100vh - 130px);
+        
     }
 }
 
@@ -200,7 +208,7 @@ body {
         height: 120px;
         max-height: 120px;
         font-size: 85%;
-        position: fixed;
+        position: relative;
         left: 0;
         bottom: 0;
         width: 98%;
@@ -311,7 +319,6 @@ body {
     display: flex;
     margin-top: 100px;
     min-width: 0;
-    overflow: hidden;
     max-height: fit-content;
 
 }
@@ -332,6 +339,42 @@ body {
     padding-right: 40px;
 }
 
+@media only screen and (max-width: 599px) {
+    .pastor-about-image {
+        width: 250px;
+        height: 350px;
+        padding-left: 0px;
+    }
+
+    .pastor-about-image-container {
+        max-width: 92vw;
+        margin: auto;
+        height: 380px;
+        text-align: center;
+    }
+
+    .pastor-about-container {
+        max-width: 92vw;
+        height: fit-content;
+        margin-top: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .pastor-about-text {
+        max-width: 92vw;
+        font-size: 80%;
+        margin: auto;
+        padding-right: 0px;
+
+    }
+    .pastor-about-text p {
+        max-width: 90vw;
+    }
+}
+
 /* Style for Ministerio de Alabanzas page */
 
 .alabanzaYoutubeContainer {
@@ -339,58 +382,40 @@ body {
     height: 650px;
     align-items: center;
     justify-content: center ;
+    margin-top: 20px;
 }
 
 .alabanzaDescriptionContainer {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    margin-top: 40px;
 }
 
 .alabanzaDescImage {
-    size: 80%;
+    height: 330px;
+    width: 490px;
+    padding-left: 20px;
 }
 
 .alabanzaDescText{
     width: 460px;
     margin-right: 10px;
+    font-size: 14.5px;
+    padding-right: 20px;
 }
 
 /* Media query to override for mobile devices */
 
 @media only screen and (max-width: 599px) {
-
-    .pastor-about-container {
-        max-width: 580px;
-        margin-top: 28px;
-        margin-right: 0px;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .pastor-about-image-container {
-        margin-bottom: 20px;
-        display: flex;
-    }
-
-    .pastor-about-image {
-        padding-left: 0;
-        margin: auto;
-    }
-
-    .pastor-about-text {
-        padding-bottom: 30px;
-    }
-
     .alabanzaYoutubeVideo {
         height: 400px;
         width: 400px;
     }
+
     .alabanzaYoutubeContainer {
         display: flex;
         height: 400px;
-        width:400px;
         align-items: center;
         justify-content: center ;
         margin-top: 20px;
@@ -398,20 +423,26 @@ body {
     
     .alabanzaDescriptionContainer {
         display: flex;
+        flex-direction: column-reverse;
         align-items: center;
         justify-content: center;
-        height: 400px;
-        width: 400px;
-        
+        height: 600px;
+        margin-top: 40px;
     }
     
     .alabanzaDescImage {
-        size: 10%;
+        height: 267px;
+        width: 400px;
+        padding-left: 0px;
+        padding-bottom: 20px;
     }
     
     .alabanzaDescText{
-        width: 260px;
-        margin-right: 10px;
+        font-size: 12px;
+        width: 400px;
+        margin-right: 0px;
+        padding-right: 0px;
+        margin-top: 15px;
     }
 
 }
