--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
     max-height: 80px;
     background-color: #ffffff;
     border-bottom: 1px solid #b9b9c1;
+    z-index: 9999;
 }
 
 .header-container {
@@ -158,12 +159,14 @@ body {
         position: absolute;
         right: 0;
         top: 0;
+        z-index: 9999;
     }
 
     .main-nav-list.responsive a.nav-list-links {
         display: block;
         text-align: right;
         font-size: 95%;
+        z-index: 9999;
     }
     
     .main-nav-list.responsive div.nav-links-block {
@@ -554,6 +557,7 @@ body {
     width: 990px;
     height: 385px;
     border-radius: 12px;
+    z-index: 0;
 }
 
 .horarioImageText {
@@ -601,12 +605,133 @@ body {
 }
 
 @media only screen and (max-width: 599px) {
+    .horarioImageContainer {
+        margin-top: 70px;
+    }
+
     #horarioImage {
-        width: 530px;
-        height: 220px;
+        width: 420px;
+        height: 200px;
     }
 
     .horarioSlidesContainer {
         height: 350px;
     }
+}
+
+/* Style for Contact Page */
+
+.contactMainContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 1100px;
+    margin: auto;
+    margin-top: 10px;
+}
+
+.contactTitleContainer {
+    margin: auto;
+    margin-bottom: 10px;
+}
+
+.contactDetailsContainer {
+    display: flex;
+}
+
+.contactMapsContainer {
+    width: 510px;
+    margin-right: 20px;
+}
+
+.contactInfoContainer {
+    width: 510px;
+    display: flex;
+    flex-direction: column;  
+    margin-top: 100px;
+}
+
+.contactInfoText {
+    display: flex;
+    justify-content: center;
+    margin: 4px;
+}
+
+.contactIconContainer {
+    display: flex;
+    justify-content: center;
+}
+
+.biggerSocialMediaIcons {
+    height: 30px;
+    width: 30px;
+    margin: 4px;
+}
+
+.contactFormContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 70px;
+}
+
+.secondContactButton {
+    color: #f2f2f2;
+    background-color: #1e72dc;
+    border-radius: 15px;
+    height: 70px;
+    width:  800px;
+    font-size: 20px;
+}
+
+@media only screen and (max-width: 599px) {
+    .contactMainContainer {
+        max-width: 420px;
+    }
+
+    .contactTitleContainer {
+        width: 420px;
+        margin: 0px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .contactTitleContainer h1 {
+        font-size: 27px;
+    }
+
+    .contactDetailsContainer {
+        max-width: 420px;
+        flex-direction: column-reverse;
+    }
+
+    .contactInfoContainer {
+        max-width: 420px;
+        margin-top: 15px;
+    }
+
+    .contactMapsContainer {
+        max-width: 420px;
+        margin-top: 30px;
+        margin-right: 0px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .contactMapsContainer iframe {
+        height: 270px;
+        width: 400px;
+    }
+
+    .contactFormContainer {
+        max-width: 420px;
+        margin-top: 50px;
+    }
+
+    .secondContactButton {
+        width: 420px;
+        font-size: 18px;
+    }
+
 }
